# zero2prod_my

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Rust后端学习路线规划.md  Rust面试题总结.md  configurations.yaml  docker-compose.yml  spec.yaml  zero2prod_技术词汇总结.md
.github/workflows/: deploy.yml
.sqlx/: query-2467b62840184e823c27ac59b4ff4afe47f80d1d3c6a54652662a2db09c7f0ac.json  query-28771e0b744751c8e9f01b5b408effe6ccc7f93201d8291e9859439b1d3815f7.json  query-390de25a914c41601b21b0f851e3c7183c4bbc210e050ece81501aeefdacbd4e.json  query-44825d770c928f298804f5040a51f29abd9fecb9696295cb870e19ec6acee537.json  query-58f649cc760e531c4a10f5fdb5424e0565bfe628429208d2a306e07d4281db3c.json  query-c91151f8c492cc16ef76f782e2018396680cbee1097275138681d82bc95d9311.json  query-cb5b70246271a12e30ce652fd5fbc1359891e04bad456ddb33052bcc9d070a93.json  query-ebbcf655a8cdd0e2076b69c0f08bb3188cc433eb445be32f995d4ec3216f8ba2.json  query-ecb3b71edb55c5649f5ef88046646b922820a9c9ddf6279d9c776fa3dafe1331.json
configuration/: base.yaml  production.yaml
migrations/: 20250414082848_create_subscriptions_table.sql  20250528042318_seed_user.sql  20250529044944_create_idempotency_table.sql  20250529101056_create_newsletter_issues_table.sql  20250529102134_create_issue_delivery_queue_table.sql
scripts/: deploy.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  subscription_confirm.rs  subscriptions.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  mod.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscription.rs  subscriptions_confirm.rs
