[package]
name = "zero2prod_my"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dev-dependencies]
once_cell = "1.21.2"

[dependencies]
actix-web = "4.10.2"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4"] }
chrono = "0.4.40"
config = "0.15.11"
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.16"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
secrecy = { version = "0.10.3", features = ["serde"] }


[dependencies.sqlx]
version = "=0.8.3"
default-features = false
features = [
    "runtime-async-std",
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[[bin]]
path = "src/main.rs"
name = "zero2prod"
