[package]
name = "zero2prod_my"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dev-dependencies]
once_cell = "1.21.2"
claims = "0.8.0"
fake = "=2.9"
rand = "=0.8"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
wiremock = "0.6.3"
serde_json = "1.0.140"
linkify = "0.10.0"

[dependencies]
actix-web = "4.10.2"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4"] }
chrono = "0.4.40"
config = "0.15.11"
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.16"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
secrecy = { version = "0.10.3", features = ["serde"] }
unicode-segmentation = "1.12.0"
validator = "0.20.0"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
rand = { version = "=0.8", features = ["std_rng"] }
thiserror = "2.0.12"
anyhow = "1.0.97"
argon2 = {version = "0.5.3", features = ["std"]}
base64 = "0.22.1"


[dependencies.sqlx]
version = "=0.8.3"
default-features = false
features = [
    "runtime-async-std",
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[[bin]]
path = "src/main.rs"
name = "zero2prod"
